--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -11,7 +11,7 @@ themesDir = "../.."
 
 # website title
 # 网站标题
-title = "uBlogger"
+title = "Bartopia"
 
 # whether to use robots.txt
 # 是否使用 robots.txt
