--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -61,7 +61,7 @@ enableEmoji = true
         identifier = "categories"
         pre = ""
         post = ""
-        name = "Categories"
+        name = "Categorías"
         url = "/categories/"
         title = ""
         weight = 3
@@ -73,14 +73,6 @@ enableEmoji = true
         url = "/categories/documentation/"
         title = ""
         weight = 4
-      [[languages.en.menu.main]]
-        identifier = "about"
-        pre = ""
-        post = ""
-        name = "About"
-        url = "/about/"
-        title = ""
-        weight = 5
       [[languages.en.menu.main]]
         identifier = "github"
         pre = "<i class='fab fa-github fa-fw'></i>"
@@ -141,7 +133,7 @@ enableEmoji = true
           # URL of avatar shown in home page
           avatarURL = "/images/avatar.png"
           # title shown in home page (HTML format is supported)
-          title = "Luis Alvarado | Bartopia "
+          title = "Luis Alvarado | Mixólogo "
           # subtitle shown in home page (HTML format is supported)
           subtitle = "Si la vida te da limones, pide sal y tequila!"
           # whether to show social links
